[package]
name = "solver"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.128"
bigdecimal = { version = "0.4.5", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive"] }
ethers = { version = "2.0.14", features = ["ws"] }
fatal = "0.1.1"
futures = "0.3.30"
serde = "1.0.210"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
threadpool = "1.8.1"
parse_duration = "2.1.1"
ethers-core = "2.0.14"
keccak-hash = "0.11.0"
fixed-hash = "0.8.0"
num-bigint = "0.4.6"
axum = { version = "0.7.7", features = ["macros", "ws"] }
cron = "0.12.1"
chrono = "0.4.38"
