[package]
name = "flash-liquidity-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.128"
bigdecimal = { version = "0.4.5", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive"] }
ethers = { version = "2.0.14", features = ["ws"] }
fatal = "0.1.1"
futures = "0.3.30"
serde = "1.0.210"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
log = { version = "0.4.22", features = ["std", "serde"] }
threadpool = "1.8.1"
